adding algo al gitignore q siempre cambia

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ backend/.tox/
 settings.json
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows
+/antsfarm/antsfarm.xcodeproj/project.xcworkspace/xcuserdata/monicaguzman.xcuserdatad
